kube/app-kube.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fibo-app
  labels:
    app: fibo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fibo-app
  template:
    metadata:
      labels:
        app: fibo-app
    spec:
      containers:
        - name: fibo-app
          image: moonnse/fibo-app:latest
          ports:
            - containerPort: 3005
