kube/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fibo-app
  labels:
    app: fibo-app
spec:
  type: ClusterIP
  ports:
    - port: 3005
  selector:
    app: fibo-app
