kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fibo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: fibo-front.info
      http:
        paths:
          - path: /?(.*)
            pathType: Prefix
            backend:
              service:
                name: front-service 
                port:
                  number: 8080

          - path: /api/?(.*)
            pathType: Prefix
            backend:
              service:
                name: fibo-app
                port:
                  number: 3005
